--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "calculator",
-  "homepage": "https://github.com/vandana7024/Calculator",
+  "homepage": "https://vandana7024.github.io/vandana7024/Calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.2.3",
     "mathjs": "^9.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -18,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build", 
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
