--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calculator",
-  "homepage": "https://vandana7024.github.io/vandana7024/Calculator",
+  "homepage": "https://vandana7024.github.io/calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
